2012-09-19  Werner Koch  <wk@gnupg.org>

	* nasl/nasl_ssh.c (nasl_ssh_userauth): Detect available
	authentication methods and allow only those.  Implement
	keyboard-interactive authentication method.

	* nasl/nasl_ssh.c (session_table_item_s): Add field VERBOSE.
	(nasl_ssh_connect): Set VERBOSE if OPENVAS_LIBSSH_DEBUG is set.

2012-09-19  Werner Koch  <wk@gnupg.org>

	* nasl/nasl_ssh.c (my_ssh_pki_import_privkey_base64): Use mkdtemp
	for glib < 2.30.

2012-09-19  Werner Koch  <wk@gnupg.org>

	Support public key authentication with libssh. The ssh public key
	is not needed anymore.  The code uses a wrappers to be prepared
	for the forthcoming libssh 0.6 API.

	* nasl/nasl_ssh.c: Include gnutls.h and libssh/legacy.h.
	(get_membuf): New.
	(my_ssh_key): New type.
	(my_ssh_key_free, add_tl, add_tlv, pkcs8_to_sshprivatekey)
	(remove_and_free_temp_key_file)
	(my_ssh_pki_import_privkey_base64)
	(my_ssh_userauth_try_publickey, my_ssh_userauth_publickey): New.
	(nasl_ssh_connect): Use envvar OPENVAS_LIBSSH_DEBUG to allow
	libssh debugging.
	(nasl_ssh_userauth): Add public key authentication.

2012-09-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_logging.c (free_log_configuration): Free syslog_ident.
	(openvas_log_func): Free prepend.

	* omp/xml.c (free_entity): Free the actual entity too.
	(handle_text): Free the old value of current->text when replacing it.

2012-09-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c (nvti_clone): Don't create copies of the strings,
	the nvti_set_* functions will do anyway. This way removing a
	memleak. Thanks to Matthew Mundell for pointing this out.

2012-09-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (plug_get_required_keys, plug_get_mandatory_keys,
	plug_get_excluded_keys, plug_get_required_ports,
	plug_get_required_udp_ports, plug_get_deps): Removed.

	* misc/plugutils.h: Removed protos accordingly.
